<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:id="@+id/rlLogin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/txt_tituloApp"
            android:layout_width="139dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="19dp"
            android:text="@string/app_name"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/logo_cazaNoticias"
            android:layout_width="161dp"
            android:layout_height="130dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="47dp"
            app:srcCompat="@mipmap/news" />

        <TextView
            android:id="@+id/txtRegistro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="186dp"
            android:text="@string/instrucciones_usuario" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/clLogin"
            android:layout_width="319dp"
            android:layout_height="112dp"
            android:layout_below="@+id/txtRegistro"
            android:layout_centerHorizontal="true">

            <EditText
                android:id="@+id/etxtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="9dp"
                android:layout_marginTop="28dp"
                android:ems="10"
                android:hint="@string/email_usuario"
                android:inputType="textEmailAddress"
                app:layout_constraintBottom_toTopOf="@+id/etxtPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/etxtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="28dp"
                android:layout_marginTop="9dp"
                android:ems="20"
                android:hint="@string/password_usuario"
                android:inputType="textPassword"
                android:singleLine="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etxtEmail" />

        </android.support.constraint.ConstraintLayout>

        <Button
            android:id="@+id/btn_ingresar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/clLogin"
            android:layout_centerHorizontal="true"
            android:onClick="botonIngresar"
            android:text="@string/btn_ingresar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/llLogin"
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:layout_below="@+id/btn_ingresar"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txt_olvidoPassword">

            <ImageView
                android:id="@+id/iv_fcb"
                android:layout_width="68dp"
                android:layout_height="36dp"
                android:layout_alignParentBottom="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@mipmap/fcb" />

            <ImageView
                android:id="@+id/iv_twitter"
                android:layout_width="76dp"
                android:layout_height="42dp"
                android:layout_centerHorizontal="true"
                android:layout_weight="1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:srcCompat="@mipmap/twitter" />

            <ImageView
                android:id="@+id/iv_instagram"
                android:layout_width="41dp"
                android:layout_height="39dp"
                android:layout_weight="1"
                app:srcCompat="@mipmap/instagram" />
        </LinearLayout>


        <TextView
            android:id="@+id/txt_olvidoPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="59dp"
            android:text="@string/btn_olvido_contraseña" />

        <TextView
            android:id="@+id/txt_registrarse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="28dp"
            android:onClick="registroUsuario"
            android:text="@string/btn_registrar_usuario" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>