<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/rlMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/txtUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="74dp"
            android:text="TextView"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="95dp"
            tools:layout_editor_absoluteY="74dp" />

        <ImageView
            android:id="@+id/iv_main"
            android:layout_width="88dp"
            android:layout_height="65dp"
            android:layout_centerHorizontal="true"
            app:srcCompat="@mipmap/news_slogan" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/cl_main"
            android:layout_width="350dp"
            android:layout_height="215dp"
            android:layout_centerInParent="true">

            <TextView
                android:id="@+id/txt_date"
                android:layout_width="345dp"
                android:layout_height="45dp"
                android:ems="10"
                android:inputType="date"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="3dp"
                tools:layout_editor_absoluteY="0dp" />

            <EditText
                android:id="@+id/etxt_tituloNoticia"
                android:layout_width="345dp"
                android:layout_height="45dp"
                android:ems="10"
                android:hint="@string/titulo_noticia_main"
                android:inputType="text"
                tools:layout_editor_absoluteY="56dp" />

            <EditText
                android:id="@+id/etxt_descripcion_noticia"
                android:layout_width="345dp"
                android:layout_height="105dp"
                android:ems="10"
                android:hint="@string/descripcion_noticia"
                android:inputType="textMultiLine"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="101dp" />
        </android.support.constraint.ConstraintLayout>

        <Button
            android:id="@+id/btn_limpiar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="85dp"
            android:layout_toStartOf="@+id/iv_main"
            android:onClick="btnLimpiar"
            android:text="@string/btn_limpiar"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btn_guardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/btn_limpiar"
            android:layout_marginEnd="94dp"
            android:onClick="btnRegistro"
            android:text="@string/btn_ingresar" />

    </RelativeLayout>


</android.support.constraint.ConstraintLayout>